; ModuleID = '/home/carl/AnghaBench/h2o/lib/handler/extr_fastcgi.c_do_proceed.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/handler/extr_fastcgi.c_do_proceed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.st_fcgi_generator_t = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*)* @do_proceed to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @do_proceed(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.st_fcgi_generator_t*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = bitcast i32* %6 to i8*
  %8 = bitcast i8* %7 to %struct.st_fcgi_generator_t*
  store %struct.st_fcgi_generator_t* %8, %struct.st_fcgi_generator_t** %5, align 8
  %9 = load %struct.st_fcgi_generator_t*, %struct.st_fcgi_generator_t** %5, align 8
  %10 = getelementptr inbounds %struct.st_fcgi_generator_t, %struct.st_fcgi_generator_t* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = call i32 @h2o_doublebuffer_consume(i32* %11)
  %13 = load %struct.st_fcgi_generator_t*, %struct.st_fcgi_generator_t** %5, align 8
  %14 = call i32 @do_send(%struct.st_fcgi_generator_t* %13)
  ret void
}

declare dso_local i32 @h2o_doublebuffer_consume(i32*) #1

declare dso_local i32 @do_send(%struct.st_fcgi_generator_t*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
